--- a/Kit/Session-1/index.html
+++ b/Kit/Session-1/index.html
@@ -37,124 +37,308 @@
 	<body>
 
 		<div class="reveal">
-			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<!-- Slide 1 -->
-				<section>
-					<h1>Introduction to Nodejs</h1>
-					<p>
-						<small>Created by <a href="github.com/hegdeashwin">Ashwin Hegde</a></small>
-					</p>
-				</section>
-
-				<!-- Slide 2 -->
-				<section>
-					<h2>Agenda</h2>
-					<p>What is Nodejs & NPM ?</p>
-					<p>History</p>
-					<p>Design</p>
-					<p>Architecture</p>
-					<p>Uses</p>
-					<p>Development</p>
-					<p>Advantages and Drawbacks</p>
-					<p>Companies using Nodejs</p>
-				</section>
-
-				<!-- Slide 3 -->
-				<section>
-					<section>
-						<h2>What is Nodejs ?</h2>
-						<p>
-							A platform built on <span style="color:yellow;">Chrome's JavaScript runtime</span> for easily building fast, scalable network applications. Node.js uses an <span style="color:yellow;">event-driven</span>, <span style="color:yellow;">non-blocking I/O model</span> that makes it lightweight and efficient, perfect for <span style="color:yellow;">data-intensive real-time</span> applications that run across distributed devices.
-						</p>
-					</section>
-					<section>
-						<p>Node.js is written is C/C++ & JavaScript. and Nodejs applications are written in <span style="color:yellow;">JavaScript</span>. These applications run <span style="color:yellow;">single-threaded</span>, although Node.js uses multiple threads for file and network events. </p>
-					</section>
-					<section>
-						<p>Node.js contains a built-in <span style="color:yellow;">asynchronous I/O</span> library for file, <span style="color:yellow;">socket</span> and <span style="color:yellow;">HTTP</span> communication. The HTTP and socket support allows Node.js to <span style="color:yellow;">act as a web server without additional web server</span> software such as Apache.</p>
-					</section>
-				</section>
-
-				<!-- Slide 4 -->
-				<section>
-					<section>
-						<h2>History</h2>
-						<p>
-							Nodejs was created by <span style="color:yellow;">Ryan Dahl</span> starting in 2009. Its development and maintenance is sponsored by <span style="color:yellow;">Joyent</span>.
-						</p>
-					</section>
-
-					<section>
-						<p>
-							Nodejs builds on this further by providing the <span style="color:yellow;">event loop</span> as a language instead of a library. Unlike the traditional models, which use <span style="color:yellow;">blocking calls</span>, Node.js does not have event-loop calls. Instead, Node.js enters the loop after executing the script, based on how JavaScript works.
-						</p>
-					</section>
-
-
-					<section>
-						<p>Google's <span style="color:yellow;">V8 engine</span> was released.</p>
-						<p>Nodejs was first published by Dahl in 2009 and could only run on Linux. It reached international attention after Dahl presented at the inaugural JSConf EU.</p>
-						<p>In June 2011, Microsoft partnered with Joyent to help create a native Windows version of Node.js</p>
-					</section>
-
-
-				</section>
-
-				<!-- Slide 5 -->
-				<section>
-					<h2>Design</h2>
-					<p>
-						
-					</p>
-				</section>
-
-				<!-- Slide 6 -->
-				<section>
-					<h2>Architecture</h2>
-					<p>
-						
-					</p>
-				</section>
-
-				<!-- Slide 7 -->
-				<section>
-					<h2>Uses</h2>
-					<p>
-
-					</p>
-				</section>
-
-				<!-- Slide 8 -->
-				<section>
-					<h2>Development</h2>
-					<p>
-
-					</p>
-				</section>
-
-				<!-- Slide 9 -->
-				<section>
-					<h2>Advantages and Drawbacks</h2>
-					<p>
-
-					</p>
-				</section>
-
-				<!-- Slide 10 -->
-				<section>
-					<h2>Companies using Nodejs</h2>
-					<p>
-
-					</p>
-				</section>
-
-				<section>
-					<h1>THE END</h1>
-					<h4>Hosted on: <a href="github.com/hegdeashwin/Server-Side-Node.js" target="_blank">github.com/hegdeashwin/Server-Side-Node.js</a></h4>
-					<h4>Follow me at: <a href="github.com/hegdeashwin" target="_blank">github.com/hegdeashwin</a></h4>
-				</section>
-
+			    <section data-id="e5d5666c6471e4c96edbf555accf3f68" class>
+			        <h1 align="center">
+			            Introduction to <font color="#4A86E8">Node.js</font>
+			        </h1>
+			        <p>
+			            Created by: Ashwin Hegde<br>
+			        </p>
+			    </section>
+			    <section data-id="153906fa12617e0e9c572b5397b993e3" class>
+			        <h2 align="left">
+			            Agenda
+			        </h2>
+			        <div align="left">
+			            <ul>
+			                <li>
+			                    <p>
+			                        &nbsp;What is Node.js &amp; NPM ?
+			                    </p>
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;History
+			                    </p>
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;Design
+			                    </p>
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;Architecture
+			                    </p>
+			                </li>
+			                <li>&nbsp;Uses
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;Development
+			                    </p>
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;Advantages and Drawbacks
+			                    </p>
+			                </li>
+			                <li>
+			                    <p>
+			                        &nbsp;Companies using Node.js
+			                    </p>
+			                </li>
+			            </ul>
+			        </div>
+			    </section>
+			    <section data-id="89c6d3c2d948e2c9ed64d3265cedddc6" class="stack">
+			        <section data-id="eab4eb16f7e32815167c4ee8a9668252" class>
+			            <h2 align="left">
+			                What is Node.js ?
+			            </h2>
+			            <div align="left">
+			                <ul>
+			                    <li>&nbsp;A platform built on <span style="color: yellow;">Chrome's JavaScript runtime.</span>
+			                    </li>
+			                </ul>
+			            </div>
+			            <div align="left">
+			                <ul>
+			                    <li>&nbsp;Uses an <font color="#FFFF00">event-drive</font>, <font color="#FFFF00">non-blocking I/O</font> model.
+			                    </li>
+			                    <li>&nbsp;Written in C/C++ &amp; JavaScript. And its applications are written in JavaScript.
+			                    </li>
+			                    <li>&nbsp;Applications are run as <font color="#FFFF00">single-threaded</font>.
+			                    </li>
+			                    <li>&nbsp;Build-in <span style="color: yellow;">asynchronous I/O<font color="#FFFFFF">,</font> file-system<font color="#D9D9D9">,</font> socket <font color="#FFFFFF">and</font> HTTP<font color="#FFFFFF">.</font></span>
+			                    </li>
+			                    <li>
+			                        <span style="color: yellow;">&nbsp;<font color="#FFFFFF">Acts as a <font color="#FFFF00">web server</font>.</font></span>
+			                    </li>
+			                    <li>
+			                        <span style="color: yellow;"><font color="#FFFFFF">&nbsp;</font></span> It provides the <span style="color: yellow;">event loop</span> as a language instead of a library.
+			                    </li>
+			                </ul>
+			            </div>
+			        </section>
+			        <section data-id="eebb988096bbb892fb126372a5410dd8" class>
+			            <h2 align="left">
+			                What is NPM ?
+			            </h2>
+			            <div align="left">
+			                <ul>
+			                    <li>&nbsp;<br>
+			                    </li>
+			                </ul>
+			            </div>
+			        </section>
+			    </section>
+			    <section data-id="001dea42abb59887cfd1b6c3343b2034" class>
+			        <h2 align="left">
+			            History
+			        </h2>
+			        <div align="left">
+			            <ul>
+			                <li>&nbsp;Created by <span style="color: yellow;">Ryan Dahl <font color="#FFFFFF">and was first&nbsp;</font></span> <span style="color: yellow;"><font color="#FFFFFF">published in 2009, could only run on Linux.</font></span>
+			                </li>
+			                <li>
+			                    <span style="color: yellow;"><font color="#FFFFFF">&nbsp;Ryan was</font></span> inspired by seeing a file upload progress bar on <font color="#FFFF00">Flickr.</font><br>
+			                </li>
+			                <li>
+			                    <span style="color: yellow;"><font color="#FFFFFF">&nbsp;</font></span> Sponsored by <span style="color: yellow;">Joyent</span>.
+			                </li>
+			                <li>&nbsp;Originally Ryan had several failed projects in <a href="http://en.wikipedia.org/wiki/C_%28programming_language%29" title="C (programming language)">C</a> and <a href="http://en.wikipedia.org/wiki/Haskell_%28programming_language%29" title="Haskell (programming language)">Haskell</a>, but when Google's <a href="http://en.wikipedia.org/wiki/V8_%28JavaScript_engine%29" title="V8 (JavaScript engine)">V8 engine</a> was released, it was success.<br>
+			                </li>
+			                <li>&nbsp;In June 2011, Microsoft partnered with Joyent to help create a native Windows version of Node.js
+			                </li>
+			                <li>&nbsp;NPM, a package manager for Node.js libraries, was introduced in 2011.
+			                </li>
+			            </ul>
+			        </div>
+			    </section>
+			    <section data-id="5f22eb5c85a12209c4d051da3a0a8a99" class="stack">
+			        <section data-id="0b7158197c68c20adc6d5d5d0469fcfe" class>
+			            <h2 align="left">
+			                <span class="mw-headline" id="Design">Design</span>
+			            </h2>
+			            <div align="left">
+			                <ul>
+			                    <li>&nbsp;The goal was <font color="#FFFF00">push capabilities <a href="http://en.wikipedia.org/wiki/Push_technology" title="Push technology"></a></font> such as those seen in Gmail.&nbsp;
+			                    </li>
+			                    <li>&nbsp;Ryan chose JavaScript because of the lack of an existing I/O API. This allowed him to define a convention of <a href="http://en.wikipedia.org/wiki/Non-blocking_I/O" title="Non-blocking I/O" class="mw-redirect">non-blocking</a>, event-driven I/O.
+			                    </li>
+			                    <li>&nbsp;Node.js is part of the Server Side JavaScript environment and extends the JavaScript API to offer server side features.
+			                    </li>
+			                    <li>&nbsp;It uses an <font color="#FFFF00">event loop</font>, instead of processes or threads.
+			                    </li>
+			                </ul>
+			            </div>
+			        </section>
+			        <section data-id="dbd14e2a7a28e9feb24e2b08ec55af7b" class>
+			            <h2>
+			                <br>
+			            </h2><img style="width: 824.974px; height: 463.819px; max-height: none; max-width: none;" src="https://s3.amazonaws.com/media-p.slid.es/uploads/ashwinhegde/images/505692/event-loop.png">
+			        </section>
+			        <section data-id="44224e70e3863a7835c4ac01c332662a" class>
+			            <h2>
+			                Similar environments
+			            </h2>
+			            <div align="left">
+			                <ul>
+			                    <li>
+			                        <a href="http://en.wikipedia.org/wiki/Tornado_%28web_server%29" title="Tornado (web server)">Tornado</a> and <a href="http://en.wikipedia.org/wiki/Twisted_%28software%29" title="Twisted (software)">Twisted</a> for Python.<br>
+			                    </li>
+			                </ul>
+			            </div>
+			            <div align="left">
+			                <ul>
+			                    <li>
+			                        <a href="http://en.wikipedia.org/wiki/Perl_Object_Environment" title="Perl Object Environment">Perl Object Environment</a> for <font color="#FFFFFF"><a href="http://en.wikipedia.org/wiki/Perl" title="Perl">Perl</a></font> .<br>
+			                    </li>
+			                </ul>
+			            </div>
+			            <div align="left">
+			                <ul>
+			                    <li>
+			                        <a href="http://en.wikipedia.org/wiki/Vert.x" title="Vert.x">Vert.x</a> for Java.<br>
+			                    </li>
+			                </ul>
+			            </div>
+			            <div align="left">
+			                <ul>
+			                    <li>
+			                        <a href="http://en.wikipedia.org/wiki/EventMachine" title="EventMachine">EventMachine</a> for <font color="#FFFFFF"><a href="http://en.wikipedia.org/wiki/Ruby_%28programming_language%29" title="Ruby (programming language)">Ruby</a></font> .
+			                    </li>
+			                </ul>
+			                <p>
+			                    <br>
+			                </p>
+			            </div>
+			            <p>
+			                Unlike most JavaScript programs, Node.js is not executed in a web browser, but instead as a <a href="http://en.wikipedia.org/wiki/Server-side_JavaScript" title="Server-side JavaScript" class="mw-redirect">server-side JavaScript</a> application.
+			            </p>
+			        </section>
+			    </section>
+			    <section data-id="0e1bdf64a282747fd01a643a635c632c" class>
+			        <h2 align="left">
+			            <span class="mw-headline" id="Architecture">Architecture</span>
+			        </h2>
+			        <div align="center">
+			            <img style="width: 408.984px; height: 524.621px; max-height: none; max-width: none;" src="https://s3.amazonaws.com/media-p.slid.es/uploads/ashwinhegde/images/505721/event-arch.png">
+			        </div>
+			    </section>
+			    <section data-id="4bf2eb0745288f51d33575d557d7dc1d" class="stack">
+			        <section data-id="7140fbb127d653106c12a7b08618acae" class>
+			            <h2 align="left">
+			                <span class="mw-headline" id="Advantages_and_drawbacks">Advantages</span>
+			            </h2>
+			            <div align="justify">
+			                <ul>
+			                    <li>Node.js allows the reuse of the same model and service interface between client-side and server-side.
+			                    </li>
+			                    <li>The fact that JavaScript had no unified API for IO allowed the developers of Node to think about the best way to implement a modern IO interface.
+			                    </li>
+			                    <li>Implement all IO in an asynchronous and non-blocking way, combined with a single-threaded event-based loop, presented a novel way to implement real-time web applications.
+			                    </li>
+			                </ul>
+			            </div>
+			        </section>
+			        <section data-id="cd117e2cf8f03e1ecfeb9b7e6016055b" class>
+			            <h2 align="left">
+			                <span class="mw-headline" id="Advantages_and_drawbacks2"><br></span>
+			            </h2>
+			            <ul>
+			                <li>Node.js can therefore keep many connections alive transparently without having to reject new incoming connections.
+			                </li>
+			                <li>Node.js is a lightweight platform, a step away from the heavier frameworks and infrastructures.
+			                </li>
+			            </ul>
+			        </section>
+			    </section>
+			    <section data-id="ee6c57a9c3a615d0659d78397ff5fd8d" class="stack">
+			        <section data-id="72b092a8e8ee22d592de5089e08a5972" class>
+			            <h2 align="left">
+			                Drawbacks
+			            </h2>
+			            <div align="left">
+			                <ul>
+			                    <li>Node.js libraries are developed actively, with a high rate of change from month-to-month. This can cause version issues, instabilities and certain development issues.
+			                    </li>
+			                </ul>
+			                <p>
+			                    <br>
+			                </p>
+			                <ul>
+			                    <li>Npm shrink wrap and package.json were introduced a while back to set up standards, but the issue of standards is still a work in process and some issues still exist.
+			                    </li>
+			                </ul>
+			            </div>
+			        </section>
+			        <section data-id="aa6464f755d8ede23aa950eedafed341" class>
+			            <ul>
+			                <li>The whole callback, event-driven, functional programming aspects of Node.js can add a learning curve burden to server-side programmers of other object-oriented languages.
+			                </li>
+			                <li>Asynchronous and event-driven code inherently adds more complexity to the code versus a synchronous code.
+			                </li>
+			                <li>As a JavaScript derivative, Node.js code is loosely-typed with Object-orientation abilities. This combination can result in code that is hard to debug.
+			                </li>
+			                <li>JavaScript has more than its share of "bad parts" that might throw off engineers and newcomers.
+			                </li>
+			            </ul>
+			        </section>
+			    </section>
+			    <section data-id="0da3700dae323420bf98f1067ff3f43c" class>
+			        <h2 align="left">
+			            Companies using Node.js
+			        </h2>
+			        <div align="left">
+			            <ul>
+			                <li>&nbsp;Linkedin<br>
+			                </li>
+			            </ul>
+			        </div>
+			        <div align="left">
+			            <ul>
+			                <li>&nbsp;Paypal
+			                </li>
+			                <li>&nbsp;SAP
+			                </li>
+			                <li>&nbsp;Microsoft
+			                </li>
+			                <li>&nbsp;Yahoo
+			                </li>
+			                <li>&nbsp;Walmart
+			                </li>
+			                <li>&nbsp;Groupon
+			                </li>
+			                <li>&nbsp;eBay
+			                </li>
+			                <li>&nbsp;http://nodejs.org/industry/<br>
+			                </li>
+			            </ul>
+			        </div>
+			    </section>
+			    <section data-id="a648afe26118f1c242e1815789d7640d" class>
+			        <h2>
+			            &nbsp;
+			        </h2>
+			        <p>
+			            <br>
+			        </p>
+			        <p>
+			            Thank You<br>
+			        </p>
+			        <p>
+			            <br>
+			        </p>
+			        <p>
+			            <a href="github.com/hegdeashwin">github.com/hegdeashwin</a>
+			        </p>
+			        <p>
+			            <a href="github.com/hegdeashwin/Server-Side-Node.js">github.com/hegdeashwin/Server-Side-Node.js</a><br>
+			        </p>
+			    </section>
 			</div>
 
 		</div>
