--- a/Kit/Session-1/index.html
+++ b/Kit/Session-1/index.html
@@ -249,11 +249,11 @@
 			        </section>
 			        <section class="" data-id="ae7e65cf1db2e70789f973aa89a30f6e">
 			            <h2 style="font-style: normal; font-variant: normal;">code block</h2>
-			            <br/>
 			            <pre>var ws = require('websocket.io'), 
 			                <br/>server = ws.listen(3000);
 			                <br/>
-			                <br/>server.on('connection', function (socket) {
+			                <br/>server.on('
+			                <font color="#ffff00">connection</font>', function (socket) {
 			                <br/>
 			                <br/>    console.log('connected to client');
 			                <br/>    socket.send('You connected to a web socket!');
@@ -269,11 +269,6 @@
 			                <br/>
 			            </pre>
 			            <br/>
-			        </section>
-			        <section data-id="f5ef99aadb37bd4e8f18b3df3c0d1b8a" class="">
-			            <h2>Event Loop
-			                <img style="width: 833.39px; height: 524.337px; max-height: none; max-width: none;" src="https://s3.amazonaws.com/media-p.slid.es/uploads/ashwinhegde/images/509490/image.axd.png"/>
-			            </h2>
 			        </section>
 			        <section data-id="44224e70e3863a7835c4ac01c332662a" class="">
 			            <h2>Similar environments</h2>
@@ -367,8 +362,8 @@
 			                        <a href="http://npmjs.org">npmjs.org</a>
 			                        <br/>
 			                    </li>
-			                    <li>Second most popular watched project on Github.</li>
-			                    <li>Build CLI based tools such as Grunt or Make.</li>
+			                    <li>2nd most popular watched project on Github.</li>
+			                    <li>Build cli based tools such as Grunt or Make.</li>
 			                    <li>Build high-performance, high I/O, TCP apps like proxy servers, PaaS, databases, etc.</li>
 			                    <li>Build a (soft) real-time social app like Twitter or a chat app.</li>
 			                    <li>
